# beancount-swe

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
beancount_swe/: __init__.py  ib.py  ib_loader.py
example/: transactions.beancount
example/IcaBanken/: README.md  config.py  ica_account_export.csv  requirements.txt  transactions.beancount
example/Länsförsäkringar/: README.md  config.py  transactions.beancount
importers/: lf.py
tests/: test_beancount_swe.py  test_lf.py
