[tool.poetry]
name = "beancount-swe"
version = "0.1.1"
description = "Beancount Importer fro csv exports from Swedish banks. Supports Länsförsäkringar"
readme="README.md"
authors = ["Alexander Poole <alex.o.poole@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = ["README.md", "LICENSE"]
repository = "https://github.com/owodunni/beancount-swe"
keywords = ["banking", "beancount", "cli-accounting", "finance", "Länsförsäkringar"]

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
