[tool.poetry]
name = "beancount-swe"
version = "0.1.1"
description = "Beancount Importer fro csv exports from Swedish banks. Supports Länsförsäkringar and IcaBanken."
readme="README.md"
authors = ["Alexander Poole <alex.o.poole@gmail.com>", "Per Lejon <per@lejon.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = ["README.md", "LICENSE"]
repository = "https://github.com/owodunni/beancount-swe"
keywords = ["banking", "beancount", "cli-accounting", "finance", "Länsförsäkringar"]

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.3.5"
babel = "^2.13.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
include = '\.pyi?$'
testpaths = [
    "tests"
]

[tool.isort]
profile="black"
src_paths=["beancount_swe", "tests"]

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
